fixed image responsive in mobile view

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-body{
+*{
     margin: 0;
+}
+
+html{
+    height: 100%;
+}
+
+.pageWrap{
+    min-height: 100%;
 }
 
 .container{
@@ -21,7 +29,6 @@ h6{
 h5{
     font-family: 'Fredericka the Great', cursive;
     font-size: 28px;
-    padding-bottom: 20px;
     text-align: center;
 }
 p{
@@ -39,8 +46,8 @@ p{
 }
 
 .aboutMe{
-    padding-top: 80px;
-    padding-bottom: 15vh;
+    padding-top: 15vh;
+    padding-bottom: 22vh;
 }
 
 .entry{
@@ -48,13 +55,15 @@ p{
     background-image: url("https://media.boingboing.net/wp-content/uploads/2018/05/cool-background1.png");
     background-size: cover;
     background-position: center center;
-    height: 50vh;
+    height: auto;
     width: 100%;
     text-align: center;
 }
 
 .introText{
-    padding-top: 15vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+
 }
 
 .card {
@@ -84,7 +93,7 @@ p{
     background-image: url("https://media.boingboing.net/wp-content/uploads/2018/05/cool-background1.png");
     background-size: cover;
     background-position: center center;
-    height: 20vh;
+    height: auto;
     width: 100%;
     text-align: center;
 }
